# auton-survival

./: .gitgnore  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  METABRIC.ipynb  README.md  dsm.py  dsm_loss.py  dsm_utilites.py  learning_DSM.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  github-actions-demo.yml  workflow.yml
auton_survival/: __init__.py  datasets.py  datasets_biolincc.py  estimators.py  experiments.py  experiments_private.py  explainers.py  logging.py  metrics.py  phenotyping.py  preprocessing.py  reporting.py  reporting_private.py  utils.py
auton_survival/.ipynb_checkpoints/: estimators-checkpoint.py  explainers-checkpoint.py  metrics-checkpoint.py  phenotyping-checkpoint.py
auton_survival/datasets/: synthetic_dataset.csv
docs/: CNAME  dashboard.html  datasets.html  datasets_biolincc.html  dsm_api.html  dsm_torch.html  estimators.html  experiments.html  explainers.html  index.html  losses.html  metrics.html  phenotyping.html  preprocessing.html  reporting.html  utilities.html  utils.html
docs/cmhe/: cmhe_api.html  cmhe_torch.html  cmhe_utilities.html  index.html
docs/contrib/: dcm_api.html  dcm_torch.html  dcm_utilities.html  index.html
dsm/: __init__.py  datasets.py  dsm_api.py  dsm_torch.py  losses.py  utilities.py
examples/: CV Survival Regression on SUPPORT Dataset.ipynb  DSM on SUPPORT Dataset.ipynb  Demo of CMHE on Synthetic Data.ipynb  Demo of Cox Mixtures with Heterogenous Effects.ipynb  Demo of Estimators on SUPPORT Dataset.ipynb  Demo of Phenotyping on Support Data.ipynb  Phenotyping Censored Time-to-Events.ipynb  Phenotyping Survival Data.ipynb  RDSM on PBC Dataset.ipynb  SUPPORT_example.ipynb  Support_TTV.ipynb  Survival Regression with Auton-Survival.ipynb  cmhe_demo_utils.py  conv_example.ipynb  conv_example.py  estimators_demo_utils.py  framingham_final_experiment.ipynb  matplotlibrc  pbc_final_experiment.ipynb  scratch.ipynb
scripts/: dev_baseline.py  dev_cnn.ipynb  dev_experiment.py  dev_experiment_baseline.py  dev_experiment_baseline_mp.py  dev_scratchpad.ipynb  dev_workflow.py  dev_workflow_custom.py  dev_workflow_custom_cnn.py  interpret results.ipynb  mp.py  rul_prediction.py
tests/: test_dcph.py  test_dsm.py
(+79 files in other folders)
